fixed mask spacing and changed scroll to only y on cards

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -711,6 +711,7 @@ a#loginButton img {
     -webkit-text-shadow: -1px 0px 1px rgba(214, 214, 214, 0.59);
     -moz-text-shadow: -1px 0px 1px rgba(214, 214, 214, 0.59);
     -o-text-shadow: -1px 0px 1px rgba(214, 214, 214, 0.59);
+    margin-top: 5px;
 }
 .btn-3{
     -webkit-transform: translateY(100px);
@@ -3434,6 +3435,6 @@ p.educate {
 }
 
 .scrolling {
-    height: 150px;
-    overflow: scroll;
+    height: 230px;
+    overflow-y: scroll;
 }
